--- a/src/app/event-bus-experiments/event-bus-experiments.component.html
+++ b/src/app/event-bus-experiments/event-bus-experiments.component.html
@@ -1,5 +1,5 @@
 <div class="course-container">
-  <h2>Observable Experiments</h2>
+  <h2>Introducing RxJS</h2>
   <lessons-counter></lessons-counter>
   <lessons-list></lessons-list>
   <input #input>
