--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -20,6 +20,8 @@
     </tr>
   </table>
 
+  <button class="button button-highlight" (click)="changeCourseData()">Mutate Local Data</button>
+
   <div *ngIf="! courses">Loading ...</div>
 
   <h2>Latest Lessons Published</h2>
